--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
 <body>
   <h1>App ganadera activa</h1>
   <p>Repositorio funcionando correctamente.</p>
+  <script>
+if ("serviceWorker" in navigator) {
+  navigator.serviceWorker.register("service-worker.js");
+}
+</script>
 </body>
 </html>
