Add manifest and theme color meta tags

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+<link rel="manifest" href="manifest.json">
+<meta name="theme-color" content="#2e7d32">
+
   <meta charset="UTF-8">
   <title>App Ganadera</title>
 </head>
